feat: Rewrite theme for OWD 2.0.0-beta.5

--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -1,5 +1,22 @@
 {
   "systemBar": {
-    "applications": "Apps"
+    "applications": {
+      "label": "Apps"
+    }
+  },
+  "applications": {
+    "categories": {
+      "favorites": "Favorites",
+      "accessories": "Accessories",
+      "games": "Games",
+      "graphics": "Graphics",
+      "internet": "Internet",
+      "office": "Office",
+      "productivity": "Productivity",
+      "programming": "Programming",
+      "utilities": "Utilities",
+      "tools": "Tools",
+      "other": "Other"
+    }
   }
 }
